Commit 4: Made some changes in the Tasks logic: now users can see, update and delete only the tasks they create. Only an Admin can see, update and delete the tasks of other users.

--- a/SecServSet/tasks.json
+++ b/SecServSet/tasks.json
@@ -2,5 +2,8 @@
   "id" : 1,
   "title" : "Task",
   "description" : "Desc",
-  "status" : "PENDING"
+  "status" : "PENDING",
+  "owner" : {
+    "id" : 1
+  }
 } ]
