Commit 6: Added Session Authentication, replacing the previous proxy authentication.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,10 @@ spring.h2.console.path=/h2-console
 
 # Jackson
 spring.jackson.serialization.indent-output=true
+
+# Session Cookie Marker
+server.servlet.session.timeout=15m
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.same-site=strict
+
