--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
 server.servlet.session.cookie.same-site=strict
 
+# For Debugging
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
